@@ -41,7 +41,6 @@ import java.lang.module.ModuleDescriptor;
 import java.lang.module.ModuleFinder;
 import java.lang.module.ModuleReference;
 import java.net.MalformedURLException;
-import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.Charset;
@@ -110,19 +109,18 @@ import java.util.Spliterators;
 import java.util.function.Function;
 import java.util.function.Supplier;
 import jdk.internal.joptsimple.*;
-import jdk.internal.jshell.tool.Feedback.FormatAction;
-import jdk.internal.jshell.tool.Feedback.FormatCase;
-import jdk.internal.jshell.tool.Feedback.FormatErrors;
-import jdk.internal.jshell.tool.Feedback.FormatResolve;
-import jdk.internal.jshell.tool.Feedback.FormatUnresolved;
-import jdk.internal.jshell.tool.Feedback.FormatWhen;
+import jdk.internal.jshell.tool.Selector.FormatAction;
+import jdk.internal.jshell.tool.Selector.FormatCase;
+import jdk.internal.jshell.tool.Selector.FormatErrors;
+import jdk.internal.jshell.tool.Selector.FormatResolve;
+import jdk.internal.jshell.tool.Selector.FormatUnresolved;
+import jdk.internal.jshell.tool.Selector.FormatWhen;
 import jdk.internal.editor.spi.BuildInEditorProvider;
 import jdk.internal.editor.external.ExternalEditor;
 import static java.util.Arrays.asList;
 import static java.util.Arrays.stream;
 import static java.util.Collections.singletonList;
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 import static jdk.jshell.Snippet.SubKind.TEMP_VAR_EXPRESSION_SUBKIND;
 import static jdk.jshell.Snippet.SubKind.VAR_VALUE_SUBKIND;
 import static java.util.stream.Collectors.toMap;
@@ -140,6 +138,8 @@ import static jdk.internal.jshell.tool.ContinuousCompletionProvider.STARTSWITH_M
  */
 public class JShellTool implements MessageHandler {
 
+    private static String PROMPT = "\u0005";
+    private static String CONTINUATION_PROMPT = "\u0006";
     private static final Pattern LINEBREAK = Pattern.compile("\\R");
     private static final Pattern ID = Pattern.compile("[se]?\\d+([-\\s].*)?");
     private static final Pattern RERUN_ID = Pattern.compile("/" + ID.pattern());
@@ -160,6 +160,7 @@ public class JShellTool implements MessageHandler {
     final PersistentStorage prefs;
     final Map<String, String> envvars;
     final Locale locale;
+    final boolean interactiveTerminal;
 
     final Feedback feedback = new Feedback();
 
@@ -179,7 +180,8 @@ public class JShellTool implements MessageHandler {
     JShellTool(InputStream cmdin, PrintStream cmdout, PrintStream cmderr,
             PrintStream console,
             InputStream userin, PrintStream userout, PrintStream usererr,
-            PersistentStorage prefs, Map<String, String> envvars, Locale locale) {
+            PersistentStorage prefs, Map<String, String> envvars, Locale locale,
+            boolean interactiveTerminal) {
         this.cmdin = cmdin;
         this.cmdout = cmdout;
         this.cmderr = cmderr;
@@ -195,6 +197,7 @@ public class JShellTool implements MessageHandler {
         this.prefs = prefs;
         this.envvars = envvars;
         this.locale = locale;
+        this.interactiveTerminal = interactiveTerminal;
     }
 
     private ResourceBundle versionRB = null;
@@ -231,6 +234,7 @@ public class JShellTool implements MessageHandler {
     static final String STARTUP_KEY  = "STARTUP";
     static final String EDITOR_KEY   = "EDITOR";
     static final String MODE_KEY     = "MODE";
+    static final String MODE2_KEY     = "MODE2";
     static final String FEEDBACK_KEY = "FEEDBACK";
     static final String REPLAY_RESTORE_KEY = "REPLAY_RESTORE";
     public static final String INDENT_KEY   = "INDENT";
@@ -407,7 +411,7 @@ public class JShellTool implements MessageHandler {
             if (failed) {
                 return Collections.emptyList();
             } else {
-                return result.collect(toList());
+                return result.toList();
             }
         }
 
@@ -458,7 +462,7 @@ public class JShellTool implements MessageHandler {
             addOptions(OptionKind.ADD_MODULES, options.valuesOf(argAddModules));
             addOptions(OptionKind.ADD_EXPORTS, options.valuesOf(argAddExports).stream()
                     .map(mp -> mp.contains("=") ? mp : mp + "=ALL-UNNAMED")
-                    .collect(toList())
+                    .toList()
             );
             if (options.has(argEnablePreview)) {
                 opts.addAll(OptionKind.ENABLE_PREVIEW, List.of(
@@ -486,7 +490,7 @@ public class JShellTool implements MessageHandler {
                 if (kind.passFlag) {
                     vals = vals.stream()
                             .flatMap(mp -> Stream.of(kind.optionFlag, mp))
-                            .collect(toList());
+                            .toList();
                 }
                 opts.addAll(kind, vals);
             }
@@ -975,7 +979,7 @@ public class JShellTool implements MessageHandler {
             };
             Runtime.getRuntime().addShutdownHook(shutdownHook);
             // execute from user input
-            try (IOContext in = new ConsoleIOContext(this, cmdin, console)) {
+            try (IOContext in = new ConsoleIOContext(this, cmdin, console, interactiveTerminal)) {
                 int indent;
                 try {
                     String indentValue = indent();
@@ -1130,11 +1134,20 @@ public class JShellTool implements MessageHandler {
         // These predefined modes are read-only
         feedback.markModesReadOnly();
         // Restore user defined modes retained on previous run with /set mode -retain
-        String encoded = prefs.get(MODE_KEY);
+        boolean oldModes = false;
+        String encoded = prefs.get(MODE2_KEY);
+        if (encoded == null || encoded.isEmpty()) {
+            // No new layout modes, see if there are old (JDK-14 and before) modes
+            oldModes = true;
+            encoded = prefs.get(MODE_KEY);
+        }
         if (encoded != null && !encoded.isEmpty()) {
             if (!feedback.restoreEncodedModes(initmh, encoded)) {
                 // Catastrophic corruption -- remove the retained modes
-                prefs.remove(MODE_KEY);
+                // Leave old mode corruption clean-up to old versions
+                if (!oldModes) {
+                    prefs.remove(MODE2_KEY);
+                }
             }
         }
         if (initMode != null) {
@@ -1156,7 +1169,11 @@ public class JShellTool implements MessageHandler {
     //where
     private void startUpRun(String start) {
         try (IOContext suin = new ScannerIOContext(new StringReader(start))) {
-            run(suin);
+            while (run(suin)) {
+                if (!live) {
+                    resetState();
+                }
+            }
         } catch (Exception ex) {
             errormsg("jshell.err.startup.unexpected.exception", ex);
             ex.printStackTrace(cmderr);
@@ -1178,8 +1195,10 @@ public class JShellTool implements MessageHandler {
      * Main loop
      *
      * @param in the line input/editing context
+     * @return true iff something remains in the input after this method finishes
+     *              (e.g. due to live == false).
      */
-    private void run(IOContext in) {
+    private boolean run(IOContext in) {
         IOContext oldInput = input;
         input = in;
         try {
@@ -1193,11 +1212,13 @@ public class JShellTool implements MessageHandler {
             }
         } catch (EOFException ex) {
             // Just exit loop
+            return false;
         } catch (IOException ex) {
             errormsg("jshell.err.unexpected.exception", ex);
         } finally {
             input = oldInput;
         }
+        return true;
     }
 
     /**
@@ -1240,12 +1261,12 @@ public class JShellTool implements MessageHandler {
                 return src;
             }
             String firstLinePrompt = interactive()
-                    ? testPrompt ? " \005"
+                    ? testPrompt ? PROMPT
                                  : feedback.getPrompt(currentNameSpace.tidNext())
                     : "" // Non-interactive -- no prompt
                     ;
             String continuationPrompt = interactive()
-                    ? testPrompt ? " \006"
+                    ? testPrompt ? CONTINUATION_PROMPT
                                  : feedback.getContinuationPrompt(currentNameSpace.tidNext())
                     : "" // Non-interactive -- no prompt
                     ;
@@ -1581,8 +1602,8 @@ public class JShellTool implements MessageHandler {
                                 ? Stream.of(String.valueOf(k.id()) + " ", ((DeclarationSnippet) k).name() + " ")
                                 : Stream.of(String.valueOf(k.id()) + " "))
                         .filter(k -> k.startsWith(argPrefix))
-                        .map(ArgSuggestion::new)
-                        .collect(Collectors.toList());
+                        .<Suggestion>map(ArgSuggestion::new)
+                        .toList();
         };
     }
 
@@ -1650,8 +1671,8 @@ public class JShellTool implements MessageHandler {
                 String flag = ovm.group("flag");
                 List<CompletionProvider> ps = ARG_OPTIONS.entrySet().stream()
                         .filter(es -> es.getKey().startsWith(flag))
-                        .map(es -> es.getValue())
-                        .collect(toList());
+                        .map(Map.Entry::getValue)
+                        .toList();
                 if (ps.size() == 1) {
                     int pastSpace = ovm.start("val");
                     List<Suggestion> result = ps.get(0).completionSuggestions(
@@ -1667,7 +1688,7 @@ public class JShellTool implements MessageHandler {
                         om.group("flag"), cursor - pastSpace, anchor);
                 if (!om.group("dd").isEmpty()) {
                     result = result.stream()
-                            .map(sug -> new Suggestion() {
+                            .<Suggestion>map(sug -> new Suggestion() {
                                 @Override
                                 public String continuation() {
                                     return "-" + sug.continuation();
@@ -1678,7 +1699,7 @@ public class JShellTool implements MessageHandler {
                                     return false;
                                 }
                             })
-                            .collect(toList());
+                            .toList();
                     --pastSpace;
                 }
                 anchor[0] += pastSpace;
@@ -1911,7 +1932,7 @@ public class JShellTool implements MessageHandler {
         String prefix = space != (-1) ? stripped.substring(0, space) : stripped;
         List<String> result = new ArrayList<>();
 
-        List<Entry<String, String>> toShow;
+        List<? extends Entry<String, String>> toShow;
 
         if (SET_SUB.matcher(stripped).matches()) {
             String setSubcommand = stripped.replaceFirst("/?set ([^ ]*)($| .*)", "$1");
@@ -1919,7 +1940,7 @@ public class JShellTool implements MessageHandler {
                 Arrays.stream(SET_SUBCOMMANDS)
                        .filter(s -> s.startsWith(setSubcommand))
                         .map(s -> new SimpleEntry<>("/set " + s, "help.set." + s))
-                        .collect(toList());
+                        .toList();
         } else if (RERUN_ID.matcher(stripped).matches()) {
             toShow =
                 singletonList(new SimpleEntry<>("/<id>", "help.rerun"));
@@ -1936,7 +1957,7 @@ public class JShellTool implements MessageHandler {
                                   || (inHelp && c.kind == CommandKind.HELP_SUBJECT))
                         .sorted((c1, c2) -> c1.command.compareTo(c2.command))
                         .map(c -> new SimpleEntry<>(c.command, c.helpKey))
-                        .collect(toList());
+                        .toList();
         }
 
         if (toShow.size() == 1 && !inHelp) {
@@ -1989,7 +2010,7 @@ public class JShellTool implements MessageHandler {
                 return setFeedback(this, at);
             case "mode":
                 return feedback.setMode(this, at,
-                        retained -> prefs.put(MODE_KEY, retained));
+                        retained -> prefs.put(MODE2_KEY, retained));
             case "prompt":
                 return feedback.setPrompt(this, at);
             case "editor":
@@ -2358,7 +2379,7 @@ public class JShellTool implements MessageHandler {
                     Snippet sn = e.snippet();
 
                     // Show any diagnostics
-                    List<Diag> diagnostics = state.diagnostics(sn).collect(toList());
+                    List<Diag> diagnostics = state.diagnostics(sn).toList();
                     String source = sn.source();
                     displayDiagnostics(source, diagnostics);
 
@@ -2760,7 +2781,7 @@ public class JShellTool implements MessageHandler {
             if (allIds == null) {
                 allSnippets = snippetSupplier.get()
                         .sorted((a, b) -> order(a) - order(b))
-                        .collect(toList());
+                        .toList();
                 allIds = allSnippets.stream()
                         .map(sn -> sn.id())
                         .toArray(n -> new String[n]);
@@ -2786,14 +2807,11 @@ public class JShellTool implements MessageHandler {
          */
         int order(String id) {
             try {
-                switch (id.charAt(0)) {
-                    case 's':
-                        return Integer.parseInt(id.substring(1));
-                    case 'e':
-                        return 0x40000000 + Integer.parseInt(id.substring(1));
-                    default:
-                        return 0x20000000 + Integer.parseInt(id);
-                }
+                return switch (id.charAt(0)) {
+                    case 's' -> Integer.parseInt(id.substring(1));
+                    case 'e' -> 0x40000000 + Integer.parseInt(id.substring(1));
+                    default -> 0x20000000 + Integer.parseInt(id);
+                };
             } catch (Exception ex) {
                 return 0x60000000;
             }
@@ -3385,7 +3403,7 @@ public class JShellTool implements MessageHandler {
     }
 
     private boolean cmdUseHistoryEntry(int index) {
-        List<Snippet> keys = state.snippets().collect(toList());
+        List<Snippet> keys = state.snippets().toList();
         if (index < 0)
             index += keys.size();
         else
@@ -3446,7 +3464,7 @@ public class JShellTool implements MessageHandler {
     List<Diag> errorsOnly(List<Diag> diagnostics) {
         return diagnostics.stream()
                 .filter(Diag::isError)
-                .collect(toList());
+                .toList();
     }
 
     /**
@@ -3624,7 +3642,7 @@ public class JShellTool implements MessageHandler {
             debug("Event with null key: %s", ste);
             return false;
         }
-        List<Diag> diagnostics = state.diagnostics(sn).collect(toList());
+        List<Diag> diagnostics = state.diagnostics(sn).toList();
         String source = sn.source();
         if (ste.causeSnippet() == null) {
             // main event
@@ -3733,7 +3751,7 @@ public class JShellTool implements MessageHandler {
     }
 
     void printSnippetStatus(DeclarationSnippet sn, boolean resolve) {
-        List<Diag> otherErrors = errorsOnly(state.diagnostics(sn).collect(toList()));
+        List<Diag> otherErrors = errorsOnly(state.diagnostics(sn).toList());
         new DisplayEvent(sn, state.status(sn), resolve, otherErrors)
                 .displayDeclarationAndValue();
     }
@@ -3802,7 +3820,7 @@ public class JShellTool implements MessageHandler {
         }
 
         private String unresolved(DeclarationSnippet key) {
-            List<String> unr = state.unresolvedDependencies(key).collect(toList());
+            List<String> unr = state.unresolvedDependencies(key).toList();
             StringBuilder sb = new StringBuilder();
             int fromLast = unr.size();
             if (fromLast > 0) {
